--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-snapcast"
-BBFILE_PATTERN_meta-snapcast = "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-snapcast = "6"
+BBFILE_COLLECTIONS += "meta-audio"
+BBFILE_PATTERN_meta-audio = "^${LAYERDIR}/"
+BBFILE_PRIORITY_meta-audio = "6"
 
-LAYERDEPENDS_meta-snapcast = "core"
-LAYERSERIES_COMPAT_meta-snapcast = "zeus dunfell"
+LAYERDEPENDS_meta-audio = "core"
+LAYERSERIES_COMPAT_meta-audio = "scarthgap"
